Graph optimizations
 - Made IntrusiveEdgesSpecifics public
 - Added boolean return flag in IntrusiveEdgesSpecifics to avoid contains/add pair
 - Cleanup GraphTests
 - Fixed deprecation of Class.newInstance() for Java 9